vemo-app/main/default/objects/OutboundEmail__c/OutboundEmail__c.object-meta.xml
<CustomObject>
    <label>Outbound Email</label>
    <nameField>
        <displayFormat>Email-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Outbound Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>