vemo-app/main/default/objects/OutboundEmail__c/fields/BccAddresses__c.field-meta.xml
<CustomField>
    <fullName>BccAddresses__c</fullName>
    <description>Optional. A list of blind carbon copy (BCC) addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum allowed is 25.</description>
    <inlineHelpText>Optional. A list of blind carbon copy (BCC) addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum allowed is 25.</inlineHelpText>
    <label>BccAddresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>