vemo-app/main/default/objects/OutboundEmail__c/fields/CcAddresses__c.field-meta.xml
<CustomField>
    <fullName>CcAddresses__c</fullName>
    <description>Optional. A list of carbon copy (CC) addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum allowed is 25.</description>
    <inlineHelpText>Optional. A list of carbon copy (CC) addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum allowed is 25.</inlineHelpText>
    <label>CcAddresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>