vemo-app/main/default/objects/OutboundEmail__c/fields/Charset__c.field-meta.xml
<CustomField>
    <fullName>Charset__c</fullName>
    <description>Optional. The character set for the email. If this value is null, the user's default value is used.</description>
    <inlineHelpText>Optional. The character set for the email. If this value is null, the user's default value is used.</inlineHelpText>
    <label>Charset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>