vemo-app/main/default/objects/OutboundEmail__c/fields/CurrentNumberofAttachments__c.field-meta.xml
<CustomField>
    <fullName>CurrentNumberofAttachments__c</fullName>
    <label>Current Number of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>