vemo-app/main/default/objects/OutboundEmail__c/fields/EntityAttachmentIDs__c.field-meta.xml
<CustomField>
    <fullName>EntityAttachmentIDs__c</fullName>
    <description>Optional. Array of IDs of Document, ContentVersion, or Attachment items to attach to the email.</description>
    <inlineHelpText>Optional. Array of IDs of Document, ContentVersion, or Attachment items to attach to the email.</inlineHelpText>
    <label>EntityAttachmentIDs</label>
    <type>TextArea</type>
</CustomField>