vemo-app/main/default/objects/OutboundEmail__c/fields/ExpectedNumberofAttachements__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNumberofAttachements__c</fullName>
    <label>Expected Number of Attachements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>