vemo-app/main/default/objects/OutboundEmail__c/fields/FileAttachments__c.field-meta.xml
<CustomField>
    <fullName>FileAttachments__c</fullName>
    <description>Optional. A list containing the file names of the binary and text files you want to attach to the email.</description>
    <inlineHelpText>Optional. A list containing the file names of the binary and text files you want to attach to the email.</inlineHelpText>
    <label>FileAttachments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>