vemo-app/main/default/objects/OutboundEmail__c/fields/HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>HtmlBody__c</fullName>
    <description>Optional. The HTML version of the email, specified by the sender. The value is encoded according to the specification associated with the organization. You must specify a value for setTemplateId, setHtmlBody, or setPlainTextBody. Or, you can define both setHtmlBody and setPlainTextBody.</description>
    <inlineHelpText>Optional. The HTML version of the email, specified by the sender. The value is encoded according to the specification associated with the organization. You must specify a value for setTemplateId, setHtmlBody, or setPlainTextBody. Or, you can define both</inlineHelpText>
    <label>HtmlBody</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>