vemo-app/main/default/objects/OutboundEmail__c/fields/InReplyToParentMessageIDs__c.field-meta.xml
<CustomField>
    <fullName>InReplyToParentMessageIDs__c</fullName>
    <description>Sets the optional In-Reply-To field of the outgoing email. This field identifies the email or emails to which this email is a reply (parent emails).</description>
    <inlineHelpText>Sets the optional In-Reply-To field of the outgoing email. This field identifies the email or emails to which this email is a reply (parent emails).</inlineHelpText>
    <label>InReplyToParentMessageIDs</label>
    <type>TextArea</type>
</CustomField>