vemo-app/main/default/objects/OutboundEmail__c/fields/MergeTemplate__c.field-meta.xml
<CustomField>
    <fullName>MergeTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Template</label>
    <type>Checkbox</type>
</CustomField>