vemo-app/main/default/objects/OutboundEmail__c/fields/OptOutPolicy__c.field-meta.xml
<CustomField>
    <fullName>OptOutPolicy__c</fullName>
    <description>Optional. If you added recipients by ID instead of email address and the Email Opt Out option is set, this method determines the behavior of the sendEmail() call. If you add recipients by their email addresses, the opt-out settings for those recipients aren’t checked and those recipients always receive the email.</description>
    <inlineHelpText>Optional. If you added recipients by ID instead of email address and the Email Opt Out option is set, this method determines the behavior of the sendEmail() call.</inlineHelpText>
    <label>OptOutPolicy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEND</fullName>
                <default>true</default>
                <label>SEND</label>
            </value>
            <value>
                <fullName>FILTER</fullName>
            </value>
            <value>
                <fullName>REJECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>