vemo-app/main/default/objects/OutboundEmail__c/fields/OrgWideEmailAddressId__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressId__c</fullName>
    <description>Optional. The ID of the organization-wide email address associated with the outgoing email. The object's DisplayName field cannot be set if the setSenderDisplayName field is already set.</description>
    <inlineHelpText>Optional. The ID of the organization-wide email address associated with the outgoing email. The object's DisplayName field cannot be set if the setSenderDisplayName field is already set.</inlineHelpText>
    <label>OrgWideEmailAddressId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>