vemo-app/main/default/objects/OutboundEmail__c/fields/PlainTextBody__c.field-meta.xml
<CustomField>
    <fullName>PlainTextBody__c</fullName>
    <description>Optional. The text version of the email, specified by the sender. You must specify a value for setTemplateId, setHtmlBody, or setPlainTextBody. Or, you can define both setHtmlBody and setPlainTextBody.</description>
    <inlineHelpText>Optional. The text version of the email, specified by the sender. You must specify a value for setTemplateId, setHtmlBody, or setPlainTextBody. Or, you can define both setHtmlBody and setPlainTextBody.</inlineHelpText>
    <label>PlainTextBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>