vemo-app/main/default/objects/OutboundEmail__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <description>Optional. The References field of the outgoing email. Identifies an email thread. Contains the parent emails' References and message IDs, and possibly the In-Reply-To fields.</description>
    <inlineHelpText>Optional. The References field of the outgoing email. Identifies an email thread. Contains the parent emails' References and message IDs, and possibly the In-Reply-To fields.</inlineHelpText>
    <label>References</label>
    <length>255</length>
    <type>Text</type>
</CustomField>