vemo-app/main/default/objects/OutboundEmail__c/fields/Send__c.field-meta.xml
<CustomField>
    <fullName>Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send</label>
    <type>Checkbox</type>
</CustomField>