vemo-app/main/default/objects/OutboundEmail__c/fields/SendFromOrgWideEmail__c.field-meta.xml
<CustomField>
    <fullName>SendFromOrgWideEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, the system will automatically send the message from the Org Wide Default Email address</description>
    <inlineHelpText>If this field is checked, the system will automatically send the message from the Org Wide Default Email address</inlineHelpText>
    <label>Send From Org Wide Email</label>
    <type>Checkbox</type>
</CustomField>