vemo-app/main/default/objects/OutboundEmail__c/fields/SendviaSES__c.field-meta.xml
<CustomField>
    <fullName>SendviaSES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send via SES</label>
    <type>Checkbox</type>
</CustomField>