vemo-app/main/default/objects/OutboundEmail__c/fields/SendWhenAttachmentsExist__c.field-meta.xml
<CustomField>
    <fullName>SendWhenAttachmentsExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send When Attachments Exist</label>
    <type>Checkbox</type>
</CustomField>