vemo-app/main/default/objects/OutboundEmail__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Optional. The email subject line. If you are using an email template, the subject line of the template overrides this value.</description>
    <inlineHelpText>Optional. The email subject line. If you are using an email template, the subject line of the template overrides this value.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>