vemo-app/main/default/objects/OutboundEmail__c/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <description>Required if using a template, optional otherwise. The ID of the contact, lead, or user to which the email will be sent. The ID you specify sets the context and ensures that merge fields in the template contain the correct data.</description>
    <inlineHelpText>Required if using a template, optional otherwise. The ID of the contact, lead, or user to which the email will be sent. The ID you specify sets the context and ensures that merge fields in the template contain the correct data.</inlineHelpText>
    <label>TargetObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>