vemo-app/main/default/objects/OutboundEmail__c/fields/TemplateID__c.field-meta.xml
<CustomField>
    <fullName>TemplateID__c</fullName>
    <description>Required if using a template, optional otherwise. The ID of the template used to create the email.</description>
    <inlineHelpText>Required if using a template, optional otherwise. The ID of the template used to create the email.</inlineHelpText>
    <label>TemplateID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>