vemo-app/main/default/objects/OutboundEmail__c/fields/ToAddresses__c.field-meta.xml
<CustomField>
    <fullName>ToAddresses__c</fullName>
    <description>Optional. A list of email addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum number of email addresses allowed is 100.</description>
    <inlineHelpText>Optional. A list of email addresses or object IDs of the contacts, leads, and users you’re sending the email to. The maximum number of email addresses allowed is 100.</inlineHelpText>
    <label>ToAddresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>