vemo-app/main/default/objects/OutboundEmail__c/fields/TreatBodiesAsTemplate__c.field-meta.xml
<CustomField>
    <fullName>TreatBodiesAsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optional. If set to true, the subject, plain text, and HTML text bodies of the email are treated as template data.</description>
    <inlineHelpText>Optional. If set to true, the subject, plain text, and HTML text bodies of the email are treated as template data.</inlineHelpText>
    <label>TreatBodiesAsTemplate</label>
    <type>Checkbox</type>
</CustomField>