vemo-app/main/default/objects/OutboundEmail__c/fields/TreatTargetObjectAsRecipient__c.field-meta.xml
<CustomField>
    <fullName>TreatTargetObjectAsRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optional. If set to true, the targetObjectId (a contact, lead, or user) is the recipient of the email. If set to false, the targetObjectId is supplied as the WhoId field for template rendering but isn’t a recipient of the email. The default is true.</description>
    <inlineHelpText>Optional. If set to true, the targetObjectId (a contact, lead, or user) is the recipient of the email. If set to false, the targetObjectId is supplied as the WhoId field for template rendering but isn’t a recipient of the email. The default is true.</inlineHelpText>
    <label>TreatTargetObjectAsRecipient</label>
    <type>Checkbox</type>
</CustomField>