vemo-app/main/default/objects/OutboundEmail__c/fields/WhatID__c.field-meta.xml
<CustomField>
    <fullName>WhatID__c</fullName>
    <description>If you specify a contact for the targetObjectId field, you can specify an optional whatId as well. This helps to further ensure that merge fields in the template contain the correct data.</description>
    <inlineHelpText>If you specify a contact for the targetObjectId field, you can specify an optional whatId as well. This helps to further ensure that merge fields in the template contain the correct data.</inlineHelpText>
    <label>WhatID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>