vemo-app/main/default/objects/OutboundEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ToAddresses__c</columns>
    <columns>Subject__c</columns>
    <columns>TemplateID__c</columns>
    <columns>TargetObjectId__c</columns>
    <columns>WhatID__c</columns>
    <columns>Send__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>